# GameEngine

./: .gitignore  CMakeLists.txt  Entity_Handler.h  README.md  Singleton.h  TODO.md  camera.h  game.cpp  game.h  gui.h  main.cpp  my_math.h  settings.h  shader-compiler.cpp  shader-compiler.h  shape.h
engine/: engine.h  game.cpp  game.h  glad.c
engine/camera/: Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h  CameraMovements.h  Culling.h  camera.h  camera_old.h
engine/core/camera/: Camera.cpp  Camera.h  CameraHandler.cpp  CameraHandler.h
engine/core/entitities/: line.h  shape.h
engine/core/eventing/: EventDispatcher.h  MouseEvents.h
engine/core/eventing/events/: CameraKeyMovementEvent.h  CursorEvent.h  KeyEvent.h  MouseButtonClickEvent.h  MouseMovementEvent.h
engine/core/input/: InputHandler.cpp  InputHandler.h  MouseHandler.h
engine/core/math/: Frustrum.h  Plane.h
engine/core/observability/: CalcTime.h
engine/core/partitioning/: bvh-bounding-volume.cpp  bvh-bounding-volume.h  bvh-node.cpp  bvh-node.h
engine/core/settings/: settings.h
engine/core/shaders/: ShaderManager.h
engine/core/state/: FlagState.h  game_state.h
engine/core/structures/: BoundingBox.cpp  BoundingBox.h  List.h  Oct-Tree.h  OctTreeNode.cpp  OctTreeNode.h  Octree.cpp  Octree.h
engine/core/types/: MouseState.h
engine/entitities/: Cube.h  Edge.h  Entity.h  EntityHandler.h  Face.h  Line.h  Point.h  Rectangle.h  Shape.h  Vertex.h  line.h  shape.h
engine/eventing/: Event.h  EventDispatcher.h  EventListener.h
engine/eventing/events/: CameraKeyMovementEvent.h  CameraMovementEvent.h  CursorEvent.h  KeyEvent.h  MouseButtonClickEvent.h  MouseMovementEvent.h
engine/game/: game.cpp  game.h
engine/input/: InputHandler.cpp  InputHandler.h  MouseHandler.h
engine/physics/: CollisionEvent.h  CollisionHandler.h  RigidBody.h  Simplex.h
engine/physics/GJK/: GJK.cpp  GJK.h
engine/rendering/: BoundingRegion.h  Entity.cpp  Entity.h  EntityController.cpp  EntityController.h  EntityUpdateType.h  Oct-Tree.h  Ray.h  RenderableEntity.h  Renderer.h  Scene.cpp  Scene.h  SceneController.h  UpdateController.h
engine/rendering/partitioning/: bvh-bounding-volume.cpp  bvh-bounding-volume.h  bvh-node.cpp  bvh-node.h
engine/utils/input/: InputHandler.cpp  InputHandler.h  MouseHandler.h
engine/utils/observability/: FPSCounter.h
engine/utils/shaders/: ShaderInfo.h
engine/utils/state/: MouseState.h
entities/: cube.h  hex-prism.h  line.h  particle.h  pyramid.h  sphere.h  triangular-prism.h  vector.h  vector_line.h  xPlane.h
shaders/: shader.frag  shader.vert
shapes/: cube.h  hex-prism.h  pyramid.h  triangular-prism.h
test_game/: key.h  main.cpp  mouse.h
test_game/entities/: HexagonalPrism.h  MyCube.h  Player.h
test_game/scenes/: PartitionScene.h  TestScene.h
test_game/shaders/: shader.frag
